crates/dora-compiler/src/dora/tests/snapshots/dora_compiler__dora__tests__operations__push_eofcreate_with_large_salt.snap
---
source: crates/dora-compiler/src/dora/tests/operations.rs
expression: op
---
module {
  func.func private @dora_fn_nop()
  func.func private @dora_fn_tracing(!llvm.ptr, i64, i8, i64, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_write_result(!llvm.ptr, i64, i64, i64, i8)
  func.func private @dora_fn_is_static(!llvm.ptr) -> i8
  func.func private @dora_fn_exp(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_keccak256_hasher(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_calldata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_calldata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_calldata_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_data_load(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_data_section(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_data_section_size(!llvm.ptr) -> i64
  func.func private @dora_fn_data_section_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_chainid(!llvm.ptr) -> i64
  func.func private @dora_fn_callvalue(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_caller(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gasprice_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_selfbalance_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_blobbasefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gaslimit_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extend_memory(!llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_memory_ptr(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_memory_size(!llvm.ptr) -> i64
  func.func private @dora_fn_code_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_sload(!llvm.ptr, !llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_sstore(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_append_log(!llvm.ptr, i64, i64)
  func.func private @dora_fn_append_log_with_one_topic(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_append_log_with_two_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_three_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_four_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_origin(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_coinbase(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_block_number(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extcodesize(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_address(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_prevrando(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_timestamp_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_basefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_balance(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_copy(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_blob_hash(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_block_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_eofcreate(!llvm.ptr, i8, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returncontract(!llvm.ptr, i8, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_call(!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_create(!llvm.ptr, i64, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_create2(!llvm.ptr, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_extcall_addr_validate(!llvm.ptr, !llvm.ptr) -> i8
  func.func private @dora_fn_extcall(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_returndata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returndata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_returndata_copy(!llvm.ptr, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_selfdestruct(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_tload(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_tstore(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_func_stack_push(!llvm.ptr, i64, i64) -> i8
  func.func private @dora_fn_func_stack_pop(!llvm.ptr) -> i64
  func.func private @dora_fn_func_stack_grow(!llvm.ptr)
  func.func private @dora_fn_set_resume(!llvm.ptr, i32)
  func.func private @dora_fn_get_resume(!llvm.ptr) -> i32
  func.func private @op236(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr, %arg4: !llvm.ptr) -> i8 {
    cf.br ^bb3
  ^bb1(%0: i8):  // 11 preds: ^bb3, ^bb4, ^bb5, ^bb6, ^bb8, ^bb9, ^bb13, ^bb14, ^bb15, ^bb18, ^bb19
    %c0_i64 = arith.constant 0 : i64
    %1 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64, %c0_i64, %1, %0) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %0 : i8
  ^bb2(%2: i8):  // no predecessors
    return %2 : i8
  ^bb3:  // pred: ^bb0
    %3 = llvm.load %arg1 : !llvm.ptr -> i64
    %c0_i64_0 = arith.constant 0 : i64
    call @dora_fn_nop() : () -> ()
    %4 = arith.cmpi uge, %3, %c0_i64_0 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %4, ^bb11, ^bb1(%c80_i8 : i8)
  ^bb4:  // pred: ^bb11
    %c0_i8 = arith.constant 0 : i8
    %5 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %6 = llvm.getelementptr %5[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %7 = llvm.load %6 : !llvm.ptr -> i256
    llvm.store %6, %arg4 : !llvm.ptr, !llvm.ptr
    %8 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %9 = llvm.getelementptr %8[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %10 = llvm.load %9 : !llvm.ptr -> i256
    llvm.store %9, %arg4 : !llvm.ptr, !llvm.ptr
    %11 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %12 = llvm.getelementptr %11[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %13 = llvm.load %12 : !llvm.ptr -> i256
    llvm.store %12, %arg4 : !llvm.ptr, !llvm.ptr
    %14 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    %15 = llvm.getelementptr %14[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %16 = llvm.load %15 : !llvm.ptr -> i256
    llvm.store %15, %arg4 : !llvm.ptr, !llvm.ptr
    %17 = call @dora_fn_is_static(%arg0) : (!llvm.ptr) -> i8
    %c0_i8_1 = arith.constant 0 : i8
    %18 = arith.cmpi ne, %17, %c0_i8_1 : i8
    %c87_i8 = arith.constant 87 : i8
    cf.cond_br %18, ^bb1(%c87_i8 : i8), ^bb5
  ^bb5:  // pred: ^bb4
    %c18446744073709551615_i256 = arith.constant 18446744073709551615 : i256
    %19 = arith.cmpi ugt, %16, %c18446744073709551615_i256 : i256
    %c84_i8 = arith.constant 84 : i8
    cf.cond_br %19, ^bb1(%c84_i8 : i8), ^bb6
  ^bb6:  // pred: ^bb5
    %20 = arith.trunci %16 : i256 to i64
    %c0_i64_2 = arith.constant 0 : i64
    %21 = arith.cmpi slt, %20, %c0_i64_2 : i64
    %c84_i8_3 = arith.constant 84 : i8
    cf.cond_br %21, ^bb1(%c84_i8_3 : i8), ^bb7
  ^bb7:  // pred: ^bb6
    %c0_i64_4 = arith.constant 0 : i64
    %22 = arith.cmpi ne, %20, %c0_i64_4 : i64
    cf.cond_br %22, ^bb13, ^bb8
  ^bb8:  // 2 preds: ^bb7, ^bb17
    %23 = arith.trunci %13 : i256 to i64
    %c1_i256 = arith.constant 1 : i256
    %24 = llvm.alloca %c1_i256 x i256 : (i256) -> !llvm.ptr
    llvm.store %7, %24 {alignment = 1 : i64} : i256, !llvm.ptr
    %25 = llvm.load %arg1 : !llvm.ptr -> i64
    %c1_i256_5 = arith.constant 1 : i256
    %26 = llvm.alloca %c1_i256_5 x i256 : (i256) -> !llvm.ptr
    llvm.store %10, %26 {alignment = 1 : i64} : i256, !llvm.ptr
    %27 = call @dora_fn_eofcreate(%arg0, %c0_i8, %20, %23, %24, %25, %26) : (!llvm.ptr, i8, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
    %28 = llvm.getelementptr %27[0] : (!llvm.ptr) -> !llvm.ptr, i8
    %29 = llvm.load %28 : !llvm.ptr -> i8
    %c0_i8_6 = arith.constant 0 : i8
    %30 = arith.cmpi ne, %29, %c0_i8_6 : i8
    cf.cond_br %30, ^bb1(%29 : i8), ^bb9
  ^bb9:  // pred: ^bb8
    %31 = llvm.getelementptr %27[8] : (!llvm.ptr) -> !llvm.ptr, i8
    %32 = llvm.load %31 : !llvm.ptr -> i64
    %33 = llvm.load %arg1 : !llvm.ptr -> i64
    %34 = arith.cmpi ult, %33, %32 : i64
    scf.if %34 {
    } else {
      %67 = arith.subi %33, %32 : i64
      llvm.store %67, %arg1 : i64, !llvm.ptr
    }
    %c80_i8_7 = arith.constant 80 : i8
    cf.cond_br %34, ^bb1(%c80_i8_7 : i8), ^bb10
  ^bb10:  // pred: ^bb9
    %35 = llvm.load %24 : !llvm.ptr -> i256
    %36 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    llvm.store %35, %36 : i256, !llvm.ptr
    %37 = llvm.getelementptr %36[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %37, %arg4 : !llvm.ptr, !llvm.ptr
    cf.br ^bb12
  ^bb11:  // pred: ^bb3
    %38 = arith.subi %3, %c0_i64_0 : i64
    llvm.store %38, %arg1 : i64, !llvm.ptr
    cf.br ^bb4
  ^bb12:  // pred: ^bb10
    %c0_i8_8 = arith.constant 0 : i8
    return %c0_i8_8 : i8
  ^bb13:  // pred: ^bb7
    %c18446744073709551615_i256_9 = arith.constant 18446744073709551615 : i256
    %39 = arith.cmpi ugt, %13, %c18446744073709551615_i256_9 : i256
    %c84_i8_10 = arith.constant 84 : i8
    cf.cond_br %39, ^bb1(%c84_i8_10 : i8), ^bb14
  ^bb14:  // pred: ^bb13
    %40 = arith.trunci %13 : i256 to i64
    %c0_i64_11 = arith.constant 0 : i64
    %41 = arith.cmpi slt, %40, %c0_i64_11 : i64
    %c84_i8_12 = arith.constant 84 : i8
    cf.cond_br %41, ^bb1(%c84_i8_12 : i8), ^bb15
  ^bb15:  // pred: ^bb14
    %42 = arith.addi %40, %20 : i64
    %c0_i64_13 = arith.constant 0 : i64
    %43 = arith.cmpi slt, %42, %c0_i64_13 : i64
    %c84_i8_14 = arith.constant 84 : i8
    cf.cond_br %43, ^bb1(%c84_i8_14 : i8), ^bb16
  ^bb16:  // pred: ^bb15
    %c31_i64 = arith.constant 31 : i64
    %c32_i64 = arith.constant 32 : i64
    %44 = arith.addi %42, %c31_i64 : i64
    %45 = arith.divui %44, %c32_i64 : i64
    %c32_i64_15 = arith.constant 32 : i64
    %46 = arith.muli %45, %c32_i64_15 : i64
    %47 = call @dora_fn_memory_size(%arg0) : (!llvm.ptr) -> i64
    %c31_i64_16 = arith.constant 31 : i64
    %c32_i64_17 = arith.constant 32 : i64
    %48 = arith.addi %47, %c31_i64_16 : i64
    %49 = arith.divui %48, %c32_i64_17 : i64
    %50 = arith.muli %49, %c32_i64_15 : i64
    %51 = arith.cmpi ult, %50, %46 : i64
    cf.cond_br %51, ^bb18, ^bb17
  ^bb17:  // 2 preds: ^bb16, ^bb20
    cf.br ^bb8
  ^bb18:  // pred: ^bb16
    %c3_i64 = arith.constant 3 : i64
    %c512_i64 = arith.constant 512 : i64
    %52 = arith.muli %49, %49 : i64
    %53 = arith.divui %52, %c512_i64 : i64
    %54 = arith.muli %49, %c3_i64 : i64
    %55 = arith.addi %53, %54 : i64
    %c3_i64_18 = arith.constant 3 : i64
    %c512_i64_19 = arith.constant 512 : i64
    %56 = arith.muli %45, %45 : i64
    %57 = arith.divui %56, %c512_i64_19 : i64
    %58 = arith.muli %45, %c3_i64_18 : i64
    %59 = arith.addi %57, %58 : i64
    %60 = arith.subi %59, %55 : i64
    %61 = llvm.load %arg1 : !llvm.ptr -> i64
    %62 = arith.cmpi ult, %61, %60 : i64
    scf.if %62 {
    } else {
      %67 = arith.subi %61, %60 : i64
      llvm.store %67, %arg1 : i64, !llvm.ptr
    }
    %c80_i8_20 = arith.constant 80 : i8
    cf.cond_br %62, ^bb1(%c80_i8_20 : i8), ^bb19
  ^bb19:  // pred: ^bb18
    %63 = call @dora_fn_extend_memory(%arg0, %46) : (!llvm.ptr, i64) -> !llvm.ptr
    %64 = llvm.getelementptr %63[0] : (!llvm.ptr) -> !llvm.ptr, i8
    %65 = llvm.load %64 : !llvm.ptr -> i8
    %c0_i8_21 = arith.constant 0 : i8
    %66 = arith.cmpi ne, %65, %c0_i8_21 : i8
    cf.cond_br %66, ^bb1(%65 : i8), ^bb20
  ^bb20:  // pred: ^bb19
    cf.br ^bb17
  }
  func.func private @op95(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr, %arg4: !llvm.ptr) -> i8 {
    cf.br ^bb3
  ^bb1(%0: i8):  // pred: ^bb3
    %c0_i64 = arith.constant 0 : i64
    %1 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64, %c0_i64, %1, %0) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %0 : i8
  ^bb2(%2: i8):  // no predecessors
    return %2 : i8
  ^bb3:  // pred: ^bb0
    %3 = llvm.load %arg1 : !llvm.ptr -> i64
    %c2_i64 = arith.constant 2 : i64
    call @dora_fn_nop() : () -> ()
    %4 = arith.cmpi uge, %3, %c2_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %4, ^bb5, ^bb1(%c80_i8 : i8)
  ^bb4:  // pred: ^bb5
    %c0_i256 = arith.constant 0 : i256
    %5 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    llvm.store %c0_i256, %5 : i256, !llvm.ptr
    %6 = llvm.getelementptr %5[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %6, %arg4 : !llvm.ptr, !llvm.ptr
    cf.br ^bb6
  ^bb5:  // pred: ^bb3
    %7 = arith.subi %3, %c2_i64 : i64
    llvm.store %7, %arg1 : i64, !llvm.ptr
    cf.br ^bb4
  ^bb6:  // pred: ^bb4
    %c0_i8 = arith.constant 0 : i8
    return %c0_i8 : i8
  }
  func.func public @call(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr) -> i8 attributes {llvm.emit_c_interface} {
    %c0_i64 = arith.constant 0 : i64
    %0 = llvm.alloca %c0_i64 x !llvm.ptr : (i64) -> !llvm.ptr
    llvm.store %arg2, %0 : !llvm.ptr, !llvm.ptr
    cf.br ^bb11
  ^bb1(%1: i8):  // 6 preds: ^bb6, ^bb7, ^bb8, ^bb9, ^bb12, ^bb14
    %c0_i64_0 = arith.constant 0 : i64
    %2 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_0, %c0_i64_0, %2, %1) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %1 : i8
  ^bb2(%3: i256):  // no predecessors
    llvm.unreachable
  ^bb3(%4: i8):  // 3 preds: ^bb10, ^bb11, ^bb16
    return %4 : i8
  ^bb4(%5: i32):  // no predecessors
    llvm.unreachable
  ^bb5:  // no predecessors
    llvm.unreachable
  ^bb6:  // pred: ^bb11
    %6 = call @op95(%arg0, %arg1, %arg2, %arg3, %0) : (!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr) -> i8
    %7 = arith.cmpi ne, %6, %c0_i8_5 : i8
    cf.cond_br %7, ^bb1(%6 : i8), ^bb7
  ^bb7:  // pred: ^bb6
    %8 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %9 = arith.cmpi uge, %8, %c3_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %9, ^bb13, ^bb1(%c80_i8 : i8)
  ^bb8:  // pred: ^bb12
    %10 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64_1 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %11 = arith.cmpi uge, %10, %c3_i64_1 : i64
    %c80_i8_2 = arith.constant 80 : i8
    cf.cond_br %11, ^bb15, ^bb1(%c80_i8_2 : i8)
  ^bb9:  // pred: ^bb14
    %12 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64_3 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %13 = arith.cmpi uge, %12, %c3_i64_3 : i64
    %c80_i8_4 = arith.constant 80 : i8
    cf.cond_br %13, ^bb17, ^bb1(%c80_i8_4 : i8)
  ^bb10:  // pred: ^bb16
    %14 = call @op236(%arg0, %arg1, %arg2, %arg3, %0) : (!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr) -> i8
    %15 = arith.cmpi ne, %14, %c0_i8_5 : i8
    cf.cond_br %15, ^bb3(%14 : i8), ^bb18
  ^bb11:  // pred: ^bb0
    %c0_i8 = arith.constant 0 : i8
    %c0_i8_5 = arith.constant 0 : i8
    %16 = arith.cmpi ne, %c0_i8, %c0_i8_5 : i8
    cf.cond_br %16, ^bb3(%c0_i8 : i8), ^bb6
  ^bb12:  // pred: ^bb13
    %c64_i256 = arith.constant 64 : i256
    %17 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c64_i256, %17 : i256, !llvm.ptr
    %18 = llvm.getelementptr %17[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %18, %0 : !llvm.ptr, !llvm.ptr
    %c0_i8_6 = arith.constant 0 : i8
    %19 = arith.cmpi ne, %c0_i8_6, %c0_i8_5 : i8
    cf.cond_br %19, ^bb1(%c0_i8_6 : i8), ^bb8
  ^bb13:  // pred: ^bb7
    %20 = arith.subi %8, %c3_i64 : i64
    llvm.store %20, %arg1 : i64, !llvm.ptr
    cf.br ^bb12
  ^bb14:  // pred: ^bb15
    %c-1_i256 = arith.constant -1 : i256
    %21 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c-1_i256, %21 : i256, !llvm.ptr
    %22 = llvm.getelementptr %21[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %22, %0 : !llvm.ptr, !llvm.ptr
    %c0_i8_7 = arith.constant 0 : i8
    %23 = arith.cmpi ne, %c0_i8_7, %c0_i8_5 : i8
    cf.cond_br %23, ^bb1(%c0_i8_7 : i8), ^bb9
  ^bb15:  // pred: ^bb8
    %24 = arith.subi %10, %c3_i64_1 : i64
    llvm.store %24, %arg1 : i64, !llvm.ptr
    cf.br ^bb14
  ^bb16:  // pred: ^bb17
    %c50_i256 = arith.constant 50 : i256
    %25 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c50_i256, %25 : i256, !llvm.ptr
    %26 = llvm.getelementptr %25[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %26, %0 : !llvm.ptr, !llvm.ptr
    %c0_i8_8 = arith.constant 0 : i8
    %27 = arith.cmpi ne, %c0_i8_8, %c0_i8_5 : i8
    cf.cond_br %27, ^bb3(%c0_i8_8 : i8), ^bb10
  ^bb17:  // pred: ^bb9
    %28 = arith.subi %12, %c3_i64_3 : i64
    llvm.store %28, %arg1 : i64, !llvm.ptr
    cf.br ^bb16
  ^bb18:  // pred: ^bb10
    %c0_i64_9 = arith.constant 0 : i64
    %c2_i8 = arith.constant 2 : i8
    %29 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_9, %c0_i64_9, %29, %c2_i8) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %c2_i8 : i8
  }
}
